Corrigindo caminhos dos arquivos estáticos

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="pagina incial.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <nav class="top-nav">
     <div class="container">
-      <a href="../Pagina acompanhe sua solicitação/acompanhamento.html" class="track-btn">
+      <a href="/Pagina acompanhe sua solicitação/acompanhamento.html" class="track-btn">
         <i class="fas fa-search"></i>
         Acompanhar solicitação
       </a>
       <div class="auth-buttons">
-        <a href="../Tela login/login.html" class="btn btn-login">
+        <a href="/Tela login/login.html" class="btn btn-login">
           <i class="fas fa-user"></i>
           Entrar
         </a>
-        <a href="../Pagina de Cadastro/cadastro.html" class="btn btn-register">
+        <a href="/Pagina de Cadastro/cadastro.html" class="btn btn-register">
           <i class="fas fa-user-plus"></i>
           Cadastrar
         </a>
@@ -91,7 +91,7 @@
     </div>
   </footer>
 
-  <script src="pagina inicial.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
 
